# cfour

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  cfour.py  cli_four.py  pyproject.toml
.github/workflows/: python.yaml  testing.yaml
tests/: test_cfour.py  test_cli_four.py
