[project]
requires-python = ">=3.7"
dependencies = [
    "termcolor",
]
[project.optional-dependencies]

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "python-lsp-server[all]>=1.5.0",
    "python-lsp-black>=1.2.1",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[pylsp.plugins]
[[pylsp.plugins.black]]
enabled = true
