[project]
name = "cfour"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "termcolor",
]

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
